# VLM_Glimpse_1000

./: README.md  pyproject.toml  requirements.txt  setup.py
src/data/: physics_simulator.py
src/models/: __init__.py  base_vlm.py  physics_infomed.py  uncertainty_head.py
